# cpp_dev

./: client.c  client.cpp  server  server.cpp
ClientServerCon/: client  client.cpp  server.c
ModernCppConcepts/TaskManager/: CMakeLists.txt  ReadMe.txt
ModernCppConcepts/TaskManager/include/: Task.h  TaskManager.h
ModernCppConcepts/TaskManager/src/: Task.cpp  TaskManager.cpp  main.cpp
